css overflow hidden fix

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,7 +24,7 @@ $transition-header: opacity 200ms, top 200ms ease-in-out;
 
 /* Fonts */
 html {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 body {
